infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
      - name: comment
        image: emirnubi/comment
---
apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec:
  selector:
    app: comment
  ports:
  - name: comment
    protocol: TCP
    port: 3002
    targetPort: 3002
