infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:2.9.15-linux
        args: [
          "-p", "4222",
          "-m", "8222",
          "-js",
        ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
  - port: 4222
    targetPort: 4222
    name: client
    protocol: TCP
  - port: 8222
    targetPort: 8222
    name: monitoring
    protocol: TCP
